# pydantic-plus-plus

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CODE_OF_CONDUCT.md  LICENSE  README.md  pyproject.toml
.github/: CODEOWNERS  FUNDING.yml  pull_request_template.md  release.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
examples/: partial_upsert.py
scripts/: release.sh
src/pydantic_plus_plus/: __init__.py  mypy_plugin.py  partial.py
src/pydantic_plus_plus/dummy/: README.md  __init__.py  _constraints.py  _generator.py  _validators.py  api.py  errors.py
src/pydantic_plus_plus/mypy/: README.md  __init__.py  _constants.py  _partial.py  _reflection.py  _update.py  plugin.py
src/pydantic_plus_plus/partial/: README.md  __init__.py  _field_selection.py  _partial.py  api.py
src/pydantic_plus_plus/reflection/: __init__.py  annotations.py  fields.py
src/pydantic_plus_plus/registry/: README.md  __init__.py  _scanner.py  api.py  errors.py
src/pydantic_plus_plus/update/: README.md  __init__.py  _merge.py  _operations.py  _reflection.py  _validators.py  api.py  errors.py
tests/: test_import.py  test_mypy_partial.yml  test_partial.py  test_placeholder.py
tests/dummy/: test_api.py
tests/mypy/: test_partial.yml  test_update.yml
tests/partial/: test_api.py  test_field_selection.py
tests/registry/: test_api.py
tests/registry/fixtures/ambiguous/: module_a.py  module_b.py
tests/registry/fixtures/basic/: models.py
tests/registry/fixtures/basic/nested/: deep_models.py
tests/registry/fixtures/with_abstract/: models.py
tests/registry/fixtures/with_base/: models.py
tests/update/: test_api.py
